# deltastar

./: .gitignore  Pipfile  README.md  TODO.md  refactoring.md  setup.cfg
deltastar/: dfst.py  dstar.py  requirements.txt  transducers.py  transitions.py  transitions_new.py
deltastar/examples/: phonology.py
deltastar/tests/: test_transducers.py  test_transitions.py
deltastar/utils/: funcs.py  stringfunctions.py
src/: dfst.py  transitions.py
src/deltastar/: dfst.py  transitions.py
tests/: transitions_test.py
