[metadata]
name = deltastar
version = 1.0.0
author = Eric Sclafani
author_email = eric.sclafani321@gmail.com
description = A package for constructing deterministic finite-state string to sting transducers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finitestate, transducers, DFST, automaton, deltastar
url = https://github.com/eric-sclafani/deltastar
project_urls =
    Bug Tracker = https://github.com/eric-sclafani/deltastar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    more_itertools == 8.10.0
    pydot == 1.4.2

[options.packages.find]
where = src